[package]
name = "utwt-raw"
description = "Provides raw types for parsing login records in utmp file"
keywords = ["utmp", "wtmp", "linux", "login"]
categories = ["os::unix-apis"]
version = "0.4.0"
authors = ["nemurubaka <cijiugechu@gmail.com>", "Xidorn Quan <me@upsuper.org>"]
repository = "https://github.com/cijiugechu/utwt-raw"
edition = "2021"
license = "MIT"


[dependencies]
cfg-if = "1.0.0"
libc = "0.2.155"
zerocopy = { version = "0.7.35", features = ["derive"] }
